# povar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ba_log.json  ba_log.ubjson  create_data.sh
cmake/: SetupDependencies.cmake
examples/batch/: experiments-cost-plot-dubrovnik.toml  experiments-cost-plot-ladybug.toml  experiments-cost-plot-stage1.toml  experiments-cost-plot-venice1672.toml  experiments-eccv-rebuttal_large.toml  experiments-eccv-rebuttal_medium.toml  experiments-eccv-rebuttal_small.toml  experiments-eccv-rebuttal_small_medium.toml  experiments-eccv-stage1.toml  experiments-eccv.toml  experiments-eta20.toml  experiments-eta30.toml  experiments-eta40.toml  experiments-tutorial.toml  experiments-tutorial_v0.toml  rootba_batch_config.toml
examples/config/: rootba_config_default.toml
external_backup/magic_enum/magic_enum/: magic_enum.hpp
python/rootba/: experiments.py  metric.py
python/rootba/fp_tree_prototype/: fp_tree.py  group_bal.py  test_fp_tree.py  visualize_jp_grouping.py  visualize_paper_example.py
python/rootba/latex/: overview_table.py  performance_profiles.py  plot.py
scripts/: build-external.sh  clang-tidy-all.sh  run-one.sh
scripts/num_ops/: bal_numbers.csv
src/: CMakeLists.txt
src/app/: CMakeLists.txt  bal.cpp  bal_factor_gui.cpp  bal_gui.cpp  bal_qr.cpp  bal_sc.cpp
src/basalt-headers/: .gitlab-ci.yml  CMakeLists.txt
src/basalt-headers/include/basalt/camera/: bal_camera.hpp  camera_static_assert.hpp  generic_camera.hpp  pinhole_radtan8_camera.hpp
src/basalt-headers/python/radtan8/: .pylintrc  basalt_radtan.py  calibration.py  main_compute_rpmax.py  main_jacobians.py  main_test_points.py  opencv_radtan.py  plot_image_points.py  requirements.txt
src/basalt-headers/scripts/: ci-install-deps.sh
src/basalt-headers/test/: CMakeLists.txt
src/basalt-headers/test/src/: benchmark_camera.cpp  test_camera.cpp  test_image.cpp
src/rootba/: CMakeLists.txt
src/rootba/bal/: CMakeLists.txt  ba_log.cpp  ba_log.hpp  ba_log_utils.cpp  bal_bundle_adjustment_helper.cpp  bal_bundle_adjustment_helper.hpp  bal_bundle_adjustment_helper.test.cpp  bal_dataset_options.hpp  bal_pipeline_summary.hpp  bal_problem.cpp  bal_problem.hpp  bal_residual_options.hpp  snavely_projection.hpp  snavely_projection.test.cpp  solver_options.hpp
src/rootba/ceres/: CMakeLists.txt  ba_log_utils.cpp  bal_bundle_adjustment.cpp  option_utils.cpp
src/rootba/cg/: CMakeLists.txt  block_sparse_matrix.hpp  block_sparse_matrix.test.cpp  conjugate_gradient.hpp  preconditioner.hpp  utils.hpp
src/rootba/options/: options_interface.cpp
src/rootba/pangolin/: CMakeLists.txt  bal_factor_map_display.cpp  bal_factor_map_display.hpp  bal_image_overlay.cpp  bal_image_overlay.hpp  bal_map_display.cpp  bal_map_display.hpp
src/rootba/qr/: CMakeLists.txt  cache_landmark_block.hpp  implicit_landmark_block.hpp  landmark_block.cpp  landmark_block.hpp  landmark_block_base.hpp  landmark_block_dynamic.hpp  landmark_block_static.hpp  linearization_qr.hpp  linearization_qr.test.cpp  linearization_utils.hpp
src/rootba/sc/: CMakeLists.txt  landmark_block.hpp  linearization_power_sc.hpp  linearization_power_sc.test.cpp  linearization_power_varproj.hpp  linearization_sc.hpp  linearization_varproj.hpp
src/rootba/solver/: CMakeLists.txt  bal_bundle_adjustment.cpp  bal_bundle_adjustment.hpp  bal_bundle_adjustment.test.cpp  linearizor.cpp  linearizor.hpp  linearizor_base.cpp  linearizor_base.hpp  linearizor_power_sc.cpp  linearizor_power_sc.hpp  linearizor_power_varproj.cpp  linearizor_power_varproj.hpp  linearizor_qr.cpp  linearizor_qr.hpp  (+3 more)
src/rootba_povar/: CMakeLists.txt
src/rootba_povar/bal/: CMakeLists.txt  ba_log.cpp  ba_log.hpp  ba_log_options.hpp  ba_log_utils.cpp  ba_log_utils.hpp  bal_app_options.hpp  bal_bundle_adjustment_helper.cpp  bal_bundle_adjustment_helper.hpp  bal_dataset_options.hpp  bal_pipeline_summary.hpp  bal_problem.cpp  bal_problem.hpp  bal_problem_io.hpp  bal_residual_options.hpp  common_types.hpp  residual_info.cpp  residual_info.hpp  snavely_projection.hpp  solver_options.cpp  solver_options.hpp
src/rootba_povar/basalt_custom/calibration/: calibration.hpp
src/rootba_povar/basalt_custom/camera/: bal_camera.hpp  camera_static_assert.hpp  double_sphere_camera.hpp  extended_camera.hpp  fov_camera.hpp  generic_camera.hpp  kannala_brandt_camera4.hpp  pinhole_camera.hpp  pinhole_radtan8_camera.hpp  unified_camera.hpp
src/rootba_povar/basalt_custom/image/: image.h  image_pyr.h
src/rootba_povar/basalt_custom/imu/: imu_types.h  preintegration.h
src/rootba_povar/basalt_custom/serialization/: headers_serialization.h
src/rootba_povar/basalt_custom/spline/: ceres_spline_helper.h  rd_spline.h  se3_spline.h  so3_spline.h
src/rootba_povar/basalt_custom/utils/: sophus_utils.hpp
src/rootba_povar/cg/: CMakeLists.txt  block_sparse_matrix.hpp  conjugate_gradient.hpp  preconditioner.hpp  utils.hpp
src/rootba_povar/cli/: CMakeLists.txt  bal_cli_utils.cpp  bal_cli_utils.hpp  cli_options.cpp  cli_options.hpp
src/rootba_povar/options/: CMakeLists.txt  enum_ref.hpp  flags_ref.hpp  options_interface.cpp  options_interface.hpp  visitable_options.hpp  wise_enum_ref.hpp
src/rootba_povar/sc/: CMakeLists.txt  landmark_block.hpp  linearization_power_varproj.hpp  linearization_sc.hpp  linearization_varproj.hpp
src/rootba_povar/solver/: CMakeLists.txt  bal_bundle_adjustment.cpp  bal_bundle_adjustment.hpp  linearizor.cpp  linearizor.hpp  linearizor_base.cpp  linearizor_base.hpp  linearizor_power_varproj.cpp  linearizor_power_varproj.hpp  linearizor_sc.cpp  linearizor_sc.hpp  solver_summary.hpp
src/rootba_povar/testing/: CMakeLists.txt  eigen_utils.hpp  float_utils.hpp  test_jacobian.hpp  test_types.hpp
src/rootba_povar/util/: CMakeLists.txt  cast.hpp  container_traits.hpp  eigen_types.hpp  enum_utils.hpp  format.hpp  json_utils.hpp  own_or_reference.hpp  pprint_utils.hpp  serialization.hpp  stl_utils.hpp  system_utils.cpp  system_utils.hpp  tbb_utils.cpp  tbb_utils.hpp  template_utils.hpp  test_io_utils.hpp  time_utils.hpp  toml_utils.hpp  visit_struct_utils.hpp
(+152 files in other folders)
